@@ -13,6 +13,8 @@ Bug fixes:
 - Fixed translation files through the CPSI18n/bin/fix_pos script.
 - Added absolute url to the photo popup call so that it works from a box 
   (where the context is not the image itself)
+- related to #297 : do not loose file title on the attached file widget when a
+  new file is loaded
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - The secure module importer ('modules') is available in the expression
